# job_mailer

./: .env.example  .gitignore  LICENSE  README.md  profile.example.toml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-scaffolding/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-VALIDATION.md
.planning/phases/01-scaffolding/: 01-01-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-data-model-and-config/: 02-01-PLAN.md  02-01-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-web-scraping/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-VALIDATION.md
.planning/phases/04-llm-generation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-VERIFICATION.md
.planning/phases/05-sending-and-logging/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-03-SUMMARY.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-orchestration-and-cli/: 06-01-SUMMARY.md  06-CONTEXT.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/job_mailer/: __main__.py  config.py  generator.py  logger.py  models.py  scraper.py  sender.py
tests/: conftest.py  test_cli.py  test_config.py  test_generator.py  test_logger.py  test_models.py  test_scraper.py  test_sender.py
(+23 files in other folders)
