# Source: Python Packaging User Guide (https://packaging.python.org/en/latest/guides/writing-pyproject-toml/)
[project]
name = "job-mailer"
version = "0.1.0"
description = "CLI tool: CSV of company URLs -> personalized cold emails via Groq + Resend"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.1",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "groq>=1.1.1",
    "resend>=2.23.0",
"python-dotenv>=1.0",
]

[project.scripts]
job-mailer = "job_mailer.__main__:app"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x"

[dependency-groups]
dev = [
    "pytest-httpx>=0.36.0",
]
